Improve performance here (hehe)